# termd

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  SUPERVISOR_VERSION  TECH.md  THIRD_PARTY_NOTICES.md
.github/workflows/: ci.yml  qa.yml  release.yml
deploy/termrelay/: .env.example  Caddyfile  docker-compose.yml
docker/: termctl.Dockerfile  termd.Dockerfile  termrelay.Dockerfile
docs/: deployment.md  installation.md  qa.md
docs/plans/: 2026-05-16-productivity-slices.md  2026-05-16-termui-i18n-theme.md  2026-05-17-protocol-0.2.0.md  2026-05-18-terminal-snapshot-flow-control.md  2026-05-19-supervisor-attach-sync.md  2026-05-20-binary-protobuf-data-plane.md  2026-05-22-daemon-terminal-mirror.md  2026-05-25-websocket-writer-queue-backpressure.md  2026-05-26-network-resilience.md  2026-05-28-terminal-poll-output.md  2026-06-01-refactor-stabilization.md  2026-06-03-termd-relay-web-one-shot-refactor-status.md  2026-06-03-termd-relay-web-one-shot-refactor.md  2026-06-09-supervisor-sharing-authority.md  2026-06-10-supervisor-final-cleanup.md  2026-06-10-supervisor-opaque-terminal-refactor.md  2026-06-11-xterm-renderer-replacement.md  2026-07-12-dual-websocket-access-token-state-machine.md  2026-07-18-web-push-notifications.md  2026-07-21-termui-apple-design-remediation.md
docs/protocols/: supervisor-terminal-attach.md  v0.7-workspace.md
docs/releases/: 0.5.0.md  0.5.1.md  0.5.2.md  0.5.3.md  0.5.4.md  0.5.5.md  0.5.6.md  0.5.7.md  0.6.0.md  0.6.1.md  0.6.2.md  0.6.3.md  0.6.4.md  0.7.0.md  0.7.1.md  0.7.2.md  0.8.0.md  0.8.1.md  0.8.10.md  0.8.11.md  0.8.12.md  0.8.13.md  0.8.14.md  0.8.15.md  0.8.16.md  0.8.17.md  0.8.18.md  0.8.19.md  0.8.2.md  0.8.3.md  0.8.4.md  0.8.5.md  0.8.6.md  0.8.7.md  0.8.8.md  0.8.9.md
docs/superpowers/plans/: 2026-05-28-relay-control-data-raw-pipe.md  2026-06-10-desktop-ime-input-sink.md
docs/superpowers/specs/: 2026-05-23-terminal-lane-architecture-design.md  2026-05-26-network-resilience-design.md
proto/: Cargo.toml
proto/src/: lib.rs
scripts/: install-termctl.sh  install-termd.sh  install-termrelay.sh  prepare-release.sh  qa.sh  release-notes.sh  test-installers.sh  update-local-termd.sh
termctl/: Cargo.toml
termctl/src/: cli.rs  client.rs  crypto.rs  error.rs  main.rs  state.rs
termctl/tests/: direct_daemon_e2e.rs
termd/: Cargo.toml
termd/src/: installer_helper.rs  lib.rs  main.rs  process_lock.rs  session_ownership.rs
termd/src/auth/: credentials.rs  mod.rs
termd/src/config/: mod.rs
termd/src/net/: mod.rs  protocol.rs  pty_bridge.rs  relay.rs  screen.rs  server.rs  signature.rs
termd/src/net/protocol/: recovery.rs  terminal_frame_log.rs
termd/src/net/server/: recovery.rs
termd/src/notifications/: mod.rs
termd/src/protocol/: README.md
termd/src/pty/: activity.rs  mod.rs  portable.rs  supervisor.rs  tmux.rs
termd/src/pty/supervisor/: terminal_journal.rs
termd/src/runtime/: mod.rs
termd/src/session/: mod.rs
termd/src/state/: client_history.rs  mod.rs  web_push.rs
termd/tests/: daemon_single_instance.rs  install_rollback_precheck.rs  installer_bridge.rs  pair_invite.rs  session_supervisor.rs  tmux_backend.rs  web_push_store.rs
terminstall/: Cargo.toml
terminstall/src/: lib.rs
termrelay/: Cargo.toml
termrelay/src/: args.rs  installer_helper.rs  main.rs  router.rs  ws.rs
termrelay/src/ws/: http_tunnel.rs  pipe_pump.rs  policy.rs  registry.rs  route_binder.rs  route_prelude.rs
termrelay/tests/: installer_bridge.rs  relay_e2e.rs
termui/frontend/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
termui/frontend/public/: manifest.webmanifest  service-worker.js
termui/frontend/src/: App.tsx  diagnostics.ts  i18n.tsx  main.tsx  push-notifications.ts  pwa.ts  responsive-layout.test.ts  responsive-layout.ts  session-names.ts  session-open-progress.ts  styles.css  theme.test.ts  theme.ts
termui/frontend/src/__tests__/: access-token-v070.test.ts  app.test.tsx  auth.test.ts  binary-packet.test.ts  browser-state.test.ts  connection-panel.test.tsx  diagnostics.test.ts  direct-client.test.ts  direct-handshake.test.ts  e2ee.test.ts  errors.test.ts  font-build.test.ts  ghostty-renderer.test.ts  i18n.test.tsx  mobile-layout-regression.test.ts  packet-codec.test.ts  pairing-http-v070.test.ts  protocol-types.test.ts  push-notifications.test.ts  pwa.test.ts  session-open-progress.test.tsx  terminal-pane.test.tsx  terminal-renderer-factory.test.ts  terminal-renderer-race.test.tsx  useTerminalAttach.test.tsx  useWorkspaceConnection.test.tsx  v070-client.test.ts  wire.test.ts  workspace-transport-v070.test.ts  xterm-renderer.test.ts
termui/frontend/src/components/: ConnectionPanel.tsx  DaemonClientsPanel.tsx  DaemonManagerPanel.tsx  DestructiveActionDialog.test.tsx  DestructiveActionDialog.tsx  FileEditorDialog.test.tsx  FileEditorDialog.tsx  MobileTerminalQuickKeys.test.tsx  MobileTerminalQuickKeys.tsx  MonacoCodeEditor.tsx  PairingQrScanner.test.tsx  PairingQrScanner.tsx  SessionFilesPanel.error.test.tsx  SessionFilesPanel.file-row.test.tsx  SessionFilesPanel.git-graph.test.tsx  SessionFilesPanel.tsx  SessionIdenticonAvatar.tsx  SessionList.test.tsx  SessionList.tsx  SessionOpenProgressControl.tsx  SessionThumbsAvatar.tsx  SettingsDialog.test.tsx  SettingsDialog.tsx  StatusBar.tsx  TerminalPane.tsx  UnsavedFileDialog.tsx  useDismissiblePopover.test.tsx  useDismissiblePopover.ts  useModalFocus.test.tsx  useModalFocus.ts
termui/frontend/src/hooks/: useSessionFiles.ts  useTerminalAttach.ts  useWorkspaceConnection.ts
termui/frontend/tests/: daemon-status-layout.spec.ts  mobile-terminal-quick-keys.spec.ts  real-relay-fixture.cleanup.spec.ts  real-relay-fixture.ts  settings-dialog-responsive.spec.ts  terminal-selection-debug.spec.ts  terminal-surface-theme.spec.ts  termui-web.real-relay.spec.ts  termui-web.smoke.spec.ts
termui/native/: README.md  analysis_options.yaml  pubspec.yaml
termui/native/lib/: main.dart
termweb/: Cargo.toml  build.rs
termweb/src/: lib.rs
(+62 files in other folders)
