[workspace]
members = ["proto", "termd", "termctl", "termrelay", "termweb"]
resolver = "3"

[workspace.package]
version = "0.5.1"
edition = "2024"
license = "MIT"
repository = "https://example.invalid/termd"

[workspace.dependencies]
prost = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
uuid = { version = "1.10", features = ["serde", "v4"] }
