[package]
name = "termd"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
axum = { version = "0.7", features = ["ws", "json"] }
base64 = "0.22"
chacha20poly1305 = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
hkdf = "0.12"
portable-pty = "0.9"
rand_core = { version = "0.6", features = ["getrandom"] }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
termd-proto = { path = "../proto" }
thiserror.workspace = true
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
