[package]
name = "termrelay"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
axum = { version = "0.7", features = ["ws", "json"] }
axum-core = "0.4"
base64 = "0.22"
ed25519-dalek = "2.1"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
hyper = "1"
hyper-util = { version = "0.1", features = ["server-auto", "service", "tokio"] }
rustls = "0.23"
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
termd-proto = { path = "../proto" }
termweb = { path = "../termweb" }
thiserror.workspace = true
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync"] }
tokio-rustls = "0.26"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
tower-service = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid.workspace = true

[dev-dependencies]
serde_json.workspace = true
termd = { path = "../termd" }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect"] }
