[package]
name = "termweb"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
build = "build.rs"

[dependencies]
axum = "0.7"

[build-dependencies]
brotli = "8"
flate2 = "1"
sha2 = "0.10"

[dev-dependencies]
brotli = "8"
flate2 = "1"
tokio = { version = "1", features = ["macros", "rt"] }
